--- a/settings/settings_drone.json
+++ b/settings/settings_drone.json
@@ -2,6 +2,7 @@
   "SeeDocsAt": "https://github.com/Microsoft/AirSim/blob/master/docs/settings.md",
   "SettingsVersion": 1.2,
   "SimMode": "Multirotor",
+  "ViewMode": "SpringArmChase",
   "CameraDefaults": {
       "CaptureSettings": [
         {
